block gap fix, acknowledgement margin

--- a/src/05-layout/_block.scss
+++ b/src/05-layout/_block.scss
@@ -4,6 +4,7 @@
   &--intro {
     gap: spacing(1);
     grid-template-columns: spacing(2) 1fr spacing(2);
+    margin-bottom: spacing(1);
     padding-top: spacing(16);
     padding-bottom: spacing(3);
 
@@ -18,6 +19,7 @@
 
   &--solid {
     grid-column-gap: spacing(1);
+    margin-bottom: spacing(1);
     padding-top: spacing(8);
   }
 }
