--- a/src/05-layout/_container.scss
+++ b/src/05-layout/_container.scss
@@ -1,6 +1,5 @@
 .jd-container {
   display: grid;
-  gap: spacing(1);
   margin-right: spacing(1);
   margin-left: spacing(1);
 }
